# connect_four

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  ConnectFourTest.cpp  MiniMaxTree.cpp  MiniMaxTree.h  board.txt  board_close.txt  board_diag.txt  board_fools.txt  board_horizontal.txt  board_new.txt  board_vertical.txt  confor.cpp  connect_four.cpp  pytest.py  python_confor.cpp  python_confor.h  python_confor.h.gch
